--- a/keranjang.html
+++ b/keranjang.html
@@ -164,10 +164,11 @@
             <div class="form-floating col-12 col-lg-10 my-lg-2 mx-lg-3">
               <textarea
                 class="form-control comment-cart"
-                placeholder="Leave a comment here"
-                id="floatingTextarea2"
+                placeholder="tambahkan komentar"
+                style="border: 1px solid #f39f9f;"
+                id="textComment"
               ></textarea>
-              <label for="floatingTextarea2">tambahkan komentar</label>
+              <label for="floatingTextarea2" class="text-secondary">tambahkan komentar</label>
             </div>
           </div>
           <div class="col-lg-4 col-12 px-lg-5">
